--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^17.0.0",
     "express": "^4.21.2",
+    "js": "^0.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "morgan": "~1.9.1"
