--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@upstash/qstash": "^2.8.1",
     "@upstash/workflow": "^0.2.14",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
